Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dhoniservice
spec:
  type: NodePort
  selector:
    app: csk
  ports:
    - port: 80
      targetPort: 8000
      nodePort: 30007
